2005-10-21 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Pango/Attributes.chs.pp: for some reason a
	couple pango functions are not available on windows in pango 1.8.x,
	only pango 1.10.x. So complile them conditional on that pango version
	on win32.

2005-10-20 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am: Added a new file Attributes.chs.pp since they are
	needed in two files in Pango. Added this and Pango.Types to the
	list of no-html files.

	* gtk/Graphics/UI/Gtk/Pango/Attributes.chs.pp: New file used by
	Rendering and Layout.

	* gtk/Graphics/UI/Gtk/Pango/Layout.chs.pp: Completed except for
	two functions that are quite labor intensive.

	* gtk/Graphics/UI/Gtk/Pango/Rendering.chs.pp: Remove the Attribute
	type.

	* gtk/Graphics/UI/Gtk/Pango/Font.chs: Docu fixes.
	
2005-10-19 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Gdk/Events.hsc: fix bug with delete events not
	being marshaled. Added a better error message in case we get any more
	of these in future.

	* gtk/Graphics/UI/Gtk/Abstract/Bin.chs,
	gtk/Graphics/UI/Gtk/Abstract/Box.chs,
	gtk/Graphics/UI/Gtk/Abstract/ButtonBox.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Container.chs,
	gtk/Graphics/UI/Gtk/Abstract/Misc.chs,
	gtk/Graphics/UI/Gtk/Abstract/Object.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Paned.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Range.chs,
	gtk/Graphics/UI/Gtk/Abstract/Scale.chs,
	gtk/Graphics/UI/Gtk/Abstract/Scrollbar.hs,
	gtk/Graphics/UI/Gtk/Abstract/Separator.hs,
	gtk/Graphics/UI/Gtk/Abstract/Widget.chs.pp: export to{Object}
	functions.

	* gtk/Graphics/UI/Gtk/ActionMenuToolbar/Action.chs.pp,
	gtk/Graphics/UI/Gtk/ActionMenuToolbar/ActionGroup.chs.pp,
	gtk/Graphics/UI/Gtk/ActionMenuToolbar/RadioAction.chs.pp,
	gtk/Graphics/UI/Gtk/ActionMenuToolbar/ToggleAction.chs.pp,
	gtk/Graphics/UI/Gtk/ActionMenuToolbar/UIManager.chs.pp: export
	to{Object} functions.
	
	* gtk/Graphics/UI/Gtk/Buttons/Button.chs.pp,
	gtk/Graphics/UI/Gtk/Buttons/CheckButton.chs,